force-app/main/default/objects/clofor_com_cfs__ConnectDepositOffsetInvoicing__c/fields/clofor_com_cfs__DepositOffsetID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepositOffsetID__c</fullName>
    <label>DEPOSIT OFFSET ID</label>
    <referenceTo>clofor_com_cfs__DepositOffset__c</referenceTo>
    <relationshipLabel>CONNECT DEPOSIT OFFSET &amp; INVOICING</relationshipLabel>
    <relationshipName>ConnectDepositOffsetinvoicing</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>