force-app/main/default/objects/clofor_com_cfs__ConnectDepositOffsetInvoicing__c/fields/clofor_com_cfs__FMSUnreceivedBalOfSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FMSUnreceivedBalOfSellingUSD__c</fullName>
    <label>FMS UNRECEIVED BAL OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>