force-app/main/default/objects/clofor_com_cfs__ConnectDepositOffsetInvoicing__c/fields/clofor_com_cfs__UnpaidBalanceOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceOfBuyingLocal__c</fullName>
    <formula>clofor_com_cfs__InvoicingID__r.clofor_com_cfs__BuyDifferentiation__c</formula>
    <label>UNPAID BALANCE OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>