force-app/main/default/objects/clofor_com_cfs__ConnectDepositOffsetInvoicing__c/fields/clofor_com_cfs__UnreceivedBalanceOfSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceivedBalanceOfSellingUSD__c</fullName>
    <formula>clofor_com_cfs__InvoicingID__r.clofor_com_cfs__UNPAID_BALANCE_OF_SELLING_USD__c</formula>
    <label>UNRECEIVED BALANCE OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>